--- a/public/css/covid.css
+++ b/public/css/covid.css
@@ -114,10 +114,10 @@ html {
   border: 0px solid red;
 }
 
-#fact_pop .pop-img,
+/* #fact_pop .pop-img,
 #virushunter_pop .pop-img {
   width: 60%;
-}
+} */
 
 @keyframes play {
   0% {
