--- a/public/css/zoonotic.css
+++ b/public/css/zoonotic.css
@@ -56,7 +56,7 @@ html {
   position: absolute;
   /* top: 13.4583vw;
   left: -21.875vw; */
-  top: 0;
+  top: -3vw;
   right: 110%;
   border: 0px solid red;
 }
