--- a/public/css/base.css
+++ b/public/css/base.css
@@ -654,8 +654,10 @@ button:active {
 
 @media only screen and (orientation: portrait) {
   .page,
+  .modal-backdrop,
+  .modal,
   .custom-modal {
-    display: none;
+    display: none !important;
   }
   /* .wrapper {
     display: none;
