--- a/public/css/nipah.css
+++ b/public/css/nipah.css
@@ -166,18 +166,18 @@ html {
 
 #q3 {
   top: 5vw;
-  left: -2vw;
+  left: -4%;
 }
 
 #q2 {
   /* top: -1.3542vw; */
   top: 2vw;
-  right: -2vw;
+  right: -4%;
 }
 
 #q1 {
-  bottom: 1.5vw;
-  right: -2vw;
+  bottom: 2.1vw;
+  right: -4%;
 }
 
 .try-footer {
@@ -244,9 +244,10 @@ html {
   .questions {
     border: 0px solid red;
     padding: 2.5vw 0 1vw 0;
+    margin-top: 5%;
   }
   .questions img {
-    width: 10rem !important;
+    width: 15rem !important;
   }
 
   .question {
@@ -278,15 +279,18 @@ html {
   }
 
   #q1 {
-    bottom: -1.5vw;
+    bottom: 0vw;
+    right: 3%;
   }
 
   #q2 {
-    top: 0;
+    top: 1vw;
+    right: 3%;
   }
 
   #q3 {
     top: 3vw;
+    left: 3%;
   }
 
   .try-footer {
