--- a/public/css/nipah.css
+++ b/public/css/nipah.css
@@ -244,10 +244,9 @@ html {
   .questions {
     border: 0px solid red;
     padding: 2.5vw 0 1vw 0;
-    margin-top: 5%;
   }
   .questions img {
-    width: 15rem !important;
+    width: 10rem !important;
   }
 
   .question {
@@ -279,18 +278,15 @@ html {
   }
 
   #q1 {
-    bottom: 0vw;
-    right: 3%;
+    bottom: -1.5vw;
   }
 
   #q2 {
-    top: 1vw;
-    right: 3%;
+    top: 0;
   }
 
   #q3 {
     top: 3vw;
-    left: 3%;
   }
 
   .try-footer {
