--- a/public/css/navigation.css
+++ b/public/css/navigation.css
@@ -8,6 +8,33 @@
   display: block;
 } */
 
+.btn-side {
+  position: relative;
+  background: transparent;
+}
+
+.btn-side .badge {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 1vw;
+  height: 1vw;
+  border-radius: 50%;
+  background: red;
+  color: white;
+  z-index: 1;
+  display: none;
+}
+
+.btn-side img {
+  position: relative;
+  z-index: 0;
+}
+
+.badge:empty {
+  display: block;
+}
+
 .nav-top {
   position: absolute;
   top: 0;
