--- a/public/css/bonus.css
+++ b/public/css/bonus.css
@@ -112,11 +112,14 @@
 }
 
 .screenshot-case {
-
-  background-color: #729e31;
-  border-radius: 5px 0 5px 5px;
-  flex: 2;
-  padding: 5px;
+  max-width: 50vw;
+  margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  justify-content: center;
+  background-color: #000;
 }
 
 .guide-overlay {
@@ -158,7 +161,7 @@
 
 .btn-camera-case {
   text-align: center;
-  margin: 0 auto;
+  margin: 0px 10px 10px;
   display: none;
 }
 
@@ -235,23 +238,37 @@
 }
 
 .photo-action-case {
-  background: #6b9d1f;
-  padding: 20px 10px;
+  background: rgba(107, 157, 31, 0.5);
+  padding:  10px;
   border-radius:  0 5px 5px 0;
   text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .photo-sub-action-case {
-  padding: 10px;
   text-align: center;
+  display: none;
+}
+
+.photo-sub-action-case-inner {
+
+  background: rgba(107, 157, 31, 0.5);
+  padding:  10px;
+  border-radius:  0 5px 5px 0;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
 }
 
 .photo-action-case .btn-theme {
-  width: 100%;
 }
 
 .photo-sub-action-case .btn-theme {
-  width: 100%;
 }
 
 .ilynas-main {
@@ -274,4 +291,22 @@
   padding: 10px;
   font-size: 1.8vw;
   font-family: tenbyfive;
+}
+
+.booth-case {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  background:#333333;
+}
+
+.booth-bottom {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
