--- a/public/css/bonus.css
+++ b/public/css/bonus.css
@@ -113,7 +113,8 @@
 .screenshot-case {
   max-width: 50vw;
   margin: 0 auto;
-  height: 100vh;
+  height: 100%;
+  
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -213,7 +214,7 @@
 
 .reward-center {
   display: flex;
-  height: 100vh;
+  height: 100%;
   align-items: center;
   position: relative;
 }
@@ -298,13 +299,17 @@
 .booth-case {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
 
   background:#333333;
+}
+
+.booth-top {
+  height: 100%;
 }
 
 .booth-bottom {
