--- a/public/css/bonus.css
+++ b/public/css/bonus.css
@@ -221,6 +221,7 @@
 
 .reward-steps {
   display: none;
+  height: 100%;
 }
 
 .reward-steps.active {
@@ -279,15 +280,25 @@
   max-width: 15vw;
   z-index: 1;
   right: -6vw;
-  bottom: 12vh;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .gina-main {
   position: absolute;
-  max-width: 19vw;
+  max-width: 18vw;
   z-index: 1;
-  left: -10vw;
-  bottom: 12vh;
+  left: -9vw;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .share-desc {
