--- a/public/css/base.css
+++ b/public/css/base.css
@@ -174,6 +174,7 @@ button:active {
   display: table;
 }
 .btn-bonus:hover {
+  color: #fff;
   background: url(../img/btn-empty-small-purple-on.png) 0 0 no-repeat;
   background-size: 100% 100%;
 }
