--- a/public/css/bonus.css
+++ b/public/css/bonus.css
@@ -498,6 +498,16 @@
   background: #333333;
 }
 
+
+.booth-frame {
+  width: 200px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  border: 4px solid #6b9d1f;
+  border-radius: 5px;
+  background: #fff;
+}
 .booth-top {
   height: 100%;
 }
@@ -572,4 +582,12 @@
   .frame-checkbox.checked::before {
     font-size: 14px;
   }
+}
+
+
+@media screen and (max-width: 768px) {
+  .booth-frame {
+    max-width: 17vw;
+  }
+
 }
