--- a/public/css/base.css
+++ b/public/css/base.css
@@ -159,7 +159,7 @@ button:active {
   background-size: 100% 100%;
 }
 
-
+/* ss */
 .btn-bonus {
   background: url(../img/btn-empty-small-purple-off.png) 0 0 no-repeat;
   background-size: 100% 100%;
